--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -2,14 +2,12 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-    tools:context=".JoinActivity"
-    android:backgroundTint="@color/main_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
-    android:id="@+id/rlRoot">
+    android:background="@color/main_color">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,33 +15,50 @@
         android:fillViewport="true">
 
         <RelativeLayout
-            android:id="@+id/rlMain"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:id="@+id/rlRoot">
 
             <ImageView
                 android:id="@+id/ivMain"
                 android:layout_width="90dp"
-                android:layout_height="0dp"
-                android:layout_centerHorizontal="true" />
+                android:layout_height="90dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_main_fxt" />
 
             <TextView
                 android:id="@+id/tvLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ivMain"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="30dp"
-                android:text="Sign up"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="Join"
                 android:textColor="@color/black"
-                android:textSize="35dp"
+                android:textSize="27dp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvLogin"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="Please enter the information without spaces."
+                android:textColor="@color/black"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:textSize="20dp" />
+
 
             <LinearLayout
                 android:id="@+id/llLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvLogin"
+                android:layout_below="@+id/tvTitle"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
@@ -51,15 +66,17 @@
                 android:paddingRight="32dp">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#96000000">
+                    android:textColorHint="#96000000"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etId"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:drawableRight="@drawable/ic_nickname"
                         android:drawablePadding="16dp"
                         android:hint="Id"
                         android:inputType="textEmailAddress"
@@ -67,113 +84,138 @@
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="#96000000"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_marginTop="10dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawablePadding="16dp"
+                        android:drawableRight="@drawable/ic_lock_white_24dp"
+                        android:hint="Password"
+                        android:id="@+id/etPassword"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="#96000000"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawablePadding="16dp"
+                        android:drawableRight="@drawable/ic_confirm"
+                        android:hint="Confirm Password"
+                        android:id="@+id/etRePassword"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/cbPw"
+                    android:text="Show Password"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="#96000000"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_marginTop="10dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawablePadding="16dp"
+                        android:drawableRight="@drawable/ic_nickname"
+                        android:hint="Nickname"
+                        android:id="@+id/etNick"
+                        android:maxLines="1"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:textColorHint="#96000000">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etEmail"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:drawableRight="@drawable/ic_email_white_24dp"
                         android:drawablePadding="16dp"
                         android:hint="Email"
-                        android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textColorHint="#96000000">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:drawablePadding="16dp"
-                        android:hint="Password"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textColorHint="#96000000">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etRePassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:drawablePadding="16dp"
-                        android:hint="Confirm Password"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textColorHint="#96000000">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etNick"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:drawablePadding="16dp"
-                        android:hint="Nickname"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
+                    android:text="* Email for verification"
+                    android:textColor="@color/red"/>
             </LinearLayout>
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/llLogin"
                 android:layout_alignParentBottom="true"
-                >
-
-
-                <com.dd.processbutton.iml.ActionProcessButton
-                    android:id="@+id/btnJoin"
+                android:layout_below="@+id/llLogin"
+                android:padding="32dp">
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="38dp"
-                    android:layout_centerHorizontal="true"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true">
 
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginRight="32dp"
-                    android:layout_marginBottom="32dp"
-                    android:text="Join"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="16dp"
-                    android:textStyle="bold"
-                    custom:pb_colorComplete="@color/green_complete"
-                    custom:pb_colorNormal="@color/purple_700"
-                    custom:pb_colorPressed="@color/purple_500"
-                    custom:pb_colorProgress="@color/purple_700"
-                    custom:pb_textComplete="SUCCESS"
-                    custom:pb_textProgress="LOADING" />
+                    <Button
+                        android:id="@+id/btnJoin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginLeft="16dp"
+                        android:background="@drawable/rounded_btn_default"
+                        android:text="Ok"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+
+                </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rlLoading"
+        android:visibility="gone"
+        android:background="#666666">
+        <ProgressBar
+            android:id="@+id/spin_kit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"/>
+    </RelativeLayout>
 </RelativeLayout>
