--- a/app/src/main/res/layout/custom_dialog_nickname.xml
+++ b/app/src/main/res/layout/custom_dialog_nickname.xml
@@ -63,7 +63,36 @@
                 android:layout_height="match_parent"
                 android:drawablePadding="16dp"
                 android:background="@color/white"
-                android:hint="Nickname"
+                android:hint="New Nickname"
+                android:maxLines="1"
+                android:maxLength="16"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="#96000000"/>
+
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/base_color">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawablePadding="16dp"
+                android:background="@color/white"
+                android:hint="Password"
+                android:inputType="textPassword"
                 android:maxLines="1"
                 android:maxLength="16"
                 android:textColor="@android:color/black"
